# autosampler3

./: com.github.chrisroerig.autosampler3.json  meson.build  notes.md
data/: com.github.chrisroerig.autosampler3.appdata.xml.in  com.github.chrisroerig.autosampler3.desktop.in  com.github.chrisroerig.autosampler3.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: autosampler3.gresource.xml  main.vala  meson.build  window.ui  window.ui~  window.vala
vapi/: portmidi.vapi
